# sharepoint

./: .gitignore  README.md  bump_and_release.sh  pyproject.toml
src/universal_mcp_sharepoint/: app.py  server.py
tests/: test_app.py
